src/peruncore/wwwroot/css/site.css
/* Sticky footer styles
-------------------------------------------------- */
html {
    position: relative;
    min-height: 100%;
}

body {
    /* Margin bottom by footer height */
    margin-bottom: 60px;
}

.footer {
    position: absol
    width: 100%;
    /* Set the fixed height of the footer here */
    height: 80px;
    background-color: #f5f5f5;
}

/* Footer
-------------------------------------------------- */
.v-buffers {
    margin-top: 90px;
    margin-bottom: 120px;
}

footer li {
    float: left;
    margin-right: 1.5em;
    margin-bottom: 1.5em
}

footer p {
    clear: left;
    margin-bottom: 0
}

.footer {
    background-color: #e2e2e2;
}

.footer-content {
    padding-top:15px
}

/* Custom stuff
-------------------------------------------------- */

h2, h4 {
    margin-top: 0px;
    margin-bottom:20px;
}

/* Vertical Tabs */

/*!
 * bootstrap-vertical-tabs - v1.1.0
 * https://dbtek.github.io/bootstrap-vertical-tabs
 * 2014-06-06
 * Copyright (c) 2014 Ä°smail Demirbilek
 * License: MIT
 */
.tabs-left, .tabs-right {
    border-bottom: none;
    padding-top: 2px;
}

.tabs-left {
    border-right: 1px solid #ddd;
}

.tabs-right {
    border-left: 1px solid #ddd;
}

    .tabs-left > li, .tabs-right > li {
        float: none;
        margin-bottom: 2px;
    }

.tabs-left > li {
    margin-right: -1px;
}

.tabs-right > li {
    margin-left: -1px;
}

.tabs-left > li.active > a,
.tabs-left > li.active > a:hover,
.tabs-left > li.active > a:focus {
    border-bottom-color: #ddd;
    border-right-color: transparent;
}

.tabs-right > li.active > a,
.tabs-right > li.active > a:hover,
.tabs-right > li.active > a:focus {
    border-bottom: 1px solid #ddd;
    border-left-color: transparent;
}

.tabs-left > li > a {
    border-radius: 4px 0 0 4px;
    margin-right: 0;
    display: block;
}

.tabs-right > li > a {
    border-radius: 0 4px 4px 0;
    margin-right: 0;
}

.vertical-text {
    margin-top: 50px;
    border: none;
    position: relative;
}

    .vertical-text > li {
        height: 20px;
        width: 120px;
        margin-bottom: 100px;
    }

        .vertical-text > li > a {
            border-bottom: 1px solid #ddd;
            border-right-color: transparent;
            text-align: center;
            border-radius: 4px 4px 0px 0px;
        }

        .vertical-text > li.active > a,
        .vertical-text > li.active > a:hover,
        .vertical-text > li.active > a:focus {
            border-bottom-color: transparent;
            border-right-color: #ddd;
            border-left-color: #ddd;
        }

    .vertical-text.tabs-left {
        left: -50px;
    }

    .vertical-text.tabs-right {
        right: -50px;
    }

        .vertical-text.tabs-right > li {
            -webkit-transform: rotate(90deg);
            -moz-transform: rotate(90deg);
            -ms-transform: rotate(90deg);
            -o-transform: rotate(90deg);
            transform: rotate(90deg);
        }

    .vertical-text.tabs-left > li {
        -webkit-transform: rotate(-90deg);
        -moz-transform: rotate(-90deg);
        -ms-transform: rotate(-90deg);
        -o-transform: rotate(-90deg);
        transform: rotate(-90deg);
    }

.mr-5 { margin-right:5px;}

/* Profile cover
-------------------------------------------------- */

.profile-cover {
    position: relative;
}

    .profile-cover + .navbar {
        margin-bottom: 40px;
    }

    .profile-cover .media {
        position: absolute;
        bottom: 20px;
        left: 20px;
        right: 20px;
    }

        .profile-cover .media .btn-default {
            border-color: #fcfcfc;
            -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
            box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
        }

    .profile-cover .media-body,
    .profile-cover small {
        color: #fff;
        text-shadow: 0 0 3px rgba(0, 0, 0, 0.8);
    }

@media (max-width: 768px) {
    .profile-cover .media {
        text-align: center;
        margin-top: 0;
        bottom: auto;
        top: 40px;
    }

    .profile-cover .media-left,
    .profile-cover .media-right {
        padding: 0;
        display: block;
        overflow-x: auto;
    }

    .profile-cover .media-body {
        display: block;
        margin-bottom: 20px;
        width: 100%;
    }

        .profile-cover .media-body > h1 {
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
            max-width: 100%;
        }
}


.profile-cover-img {
    background-position: 50% 50%;
    background-repeat: no-repeat;
    background-size: cover;
    height: 350px;
    border-top-right-radius: 3px;
    border-top-left-radius: 3px;
}
    

/*.profile-cover-img {
    max-width: 1140px;
    height: 350px;
}*/

@media (max-width: 768px) {
    .profile-cover-img {
        height: 320px;
    }
}

.media .profile-thumb img {
    width: 150px;
    height: 150px;
    border: 3px solid #fff;
    -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
    box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
}
.profile-cover .media-body, .profile-cover small {
    color: #fff;
    text-shadow: 0 0 3px rgba(0, 0, 0, 0.8);
}
.display-block, label.display-block {
    display: block;
}

/*==*/
/*
.img-cropper {
    width: 100%;
}

.img-cropper img {
    max-width: 100%;
}

.user-avatar {
    position: relative;
}

.user-avatar .overlay {
    display: none;
    position: absolute;
    bottom: 5px;
    margin-left: 50%;
    transform: translateX(-58%);
    padding: 3px;
    background: white;
    border: 1px solid #333;
    border-radius: 3px;
}

.user-avatar:hover .overlay {
    display: block;
}
*/

/* Change User Profile Image */
.user-avatar {
    position: relative;
}

.change-avatar {
    width: 150px;
    height: 150px;
    opacity: 0;
    position: absolute;
    top: 0;
    left: 0;
    overflow: hidden;
    padding: 5px;
    display: table;
}

.txt-change-avatar {
    display: table-cell;
    vertical-align: middle;
    text-align: center;
    color: #fff;
    font-size: 24px;
}
.preloader {
    width: 40px !important;
    height: 40px !important;
    display: none;
}
/* Change User Cover */
.change-cover {
    position: absolute;
    top: 10px;
    left: 10px;
    font-size: 14px;
    opacity: 0.8;
    padding: 5px;
    overflow: hidden;
}

.change-cover-text {
    display: none;
}

.change-cover:hover > .change-cover-text {
    display: inline;
    padding-left:5px;
}

.change-cover input[type=file], .change-avatar input[type=file] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    filter: alpha(opacity=0);
    opacity: 0;
    outline: none;
    background: white;
    cursor: inherit;
    display: block;
}

.cropper-crop-box, .cropper-view-box {
    border-radius: 50%;
}

.cropper-view-box {
    box-shadow: 0 0 0 1px #39f;
    outline: 0;
}
#preview-image {
    max-width: 100%;
}

.overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.85);
    z-index: 9999;
    color: white;
    display: inline-block;
}

/* Common */

.overlay-row {
    display: table;
    width: 100%;
    height: 100%;
}

.overlay-center {
    display: table-cell;
    vertical-align: middle;
    float: none;
}

progress {
    margin-top:5px;
    width:100%;    
    border: 0;
    height: 18px;
}

/*-----------*/
.padding-0 {
    padding-left: 0 !important;
    padding-right: 0 !important;
}

